--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <div class="game-container">
-    <h1>Rock, Paper, Scissors</h1>
+    <h1>Rock, Paper, Scissors - Updated Version!!!!</h1>
     <div class="choices">
       <button onclick="play('rock')">🪨 Rock</button>
       <button onclick="play('paper')">📄 Paper</button>
